# nlp-multiagent-rag

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml
src/: __init__.py  document_processor.py  main.py  pipeline.py
src/agents/: __init__.py  agents_generator.py  agents_memory.py  agents_retriever.py  generator_agent.py  memory_agent.py  retriever_agent.py
src/application/: __init__.py  application_factory.py  application_session.py
src/cli/: __init__.py  cli_quota.py
src/configuration/: __init__.py  configuration_runtime.py
src/embeddings/: __init__.py  embeddings_chunks.py  embeddings_contracts.py  embeddings_sentence_transformer.py
src/ingestion/: __init__.py  chunker.py  embedder.py  ingestion_chunker.py  ingestion_loader.py  ingestion_preprocessing.py  ingestion_processor.py  loader.py  preprocessing.py
src/memory/: __init__.py  memory.py  memory_contracts.py  memory_in_memory.py
src/orchestration/: __init__.py  orchestration_rag.py
src/providers/: __init__.py  providers_contracts.py  providers_generation_huggingface.py  providers_generation_openai.py  providers_router.py
src/quota/: __init__.py  quota_contracts.py  quota_memory.py  quota_redis.py
src/utils/: utils.py
src/vectorstore/: __init__.py  faiss_store.py  vectorstore_faiss.py
tests/: __init__.py  conftest.py  test_app.py  test_architecture.py  test_config.py  test_pipeline.py  test_session.py
tests/ingestion/: __init__.py  test_chunker.py  test_embedder.py  test_loader.py  test_preprocessing.py
tests/providers/: __init__.py  test_generation_providers.py  test_generator.py  test_retriever.py  test_router.py
tests/quota/: __init__.py  test_cli.py  test_quota.py
tests/vectorstore/: __init__.py  test_faiss_store.py
