[tool.poetry]
name = "nlp-multiagent-rag"
version = "0.1.0"
description = ""
authors = ["Rino Albertin <rino.albertin@ost.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.1"
pre-commit = "^4.2.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
